kubernetes/apps/agents/anton/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anton
spec:
  hostnames:
  - anton.timcasa.me
  parentRefs:
  - name: envoy-internal
    namespace: network
  rules:
  - backendRefs:
    - name: anton
      port: 8080
